@@ -103,6 +103,7 @@ class levelsquare : public square
   virtual fluid* GetFluid() const { return Fluid; }
   virtual void SetFluid(fluid* What) { Fluid = What; }
   virtual void RemoveFluid();
+  virtual void HasBeenHitBy(item*, float, uchar, bool);
  protected:
   groundlevelterrain* GroundLevelTerrain;
   overlevelterrain* OverLevelTerrain;
